// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceProvidersPage should match the snapshot when user is connected 1`] = `
<div>
  <div
    class="fr-container fr-mt-8w"
  >
    <div>
      ServiceProvidersPageTitleComponent
    </div>
  </div>
</div>
`;

exports[`ServiceProvidersPage should match the snapshot when user is not connected 1`] = `
<div>
  <div
    class="fr-container fr-mt-8w"
  >
    <div>
      ServiceProvidersPageTitleComponent
    </div>
    <p
      class="text-center"
    >
      Vous devez 
      <a
        href="/login"
      >
        vous connecter
      </a>
       pour accéder à cette page ultra sécurisée
    </p>
  </div>
</div>
`;
